--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@prisma/client": "^6.0.1",
     "express": "^4.21.2",
     "moment": "^2.30.1",
-    "mysql2": "^3.11.5"
+    "mysql2": "^3.11.5",
+    "node-cron": "^3.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.7",
