--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.0.1",
+    "dayjs": "^1.11.13",
     "express": "^4.21.2",
     "moment": "^2.30.1",
     "mysql2": "^3.11.5",
-    "node-cron": "^3.0.0"
+    "node-cron": "^3.0.0",
+    "telebit": "^0.15.4"
   },
   "devDependencies": {
     "nodemon": "^3.1.7",
