--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.0.1",
+    "axios": "^1.7.9",
     "dayjs": "^1.11.13",
     "express": "^4.21.2",
     "moment": "^2.30.1",
